fixed alignment issue with menu items

--- a/styles/scss/layout/header.scss
+++ b/styles/scss/layout/header.scss
@@ -1,19 +1,32 @@
 header {
-    // width: 100%;
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    align-items: flex-start;
     justify-content: space-between;
-    z-index: 2;
-    margin: 50px 25px 0 25px;
-    justify-self: stretch;
-    align-self: start;
-    // position: fixed;
+    height: -webkit-min-content;
+    height: -moz-min-content;
+    height: min-content;
+    margin: 0 2vw;
+    // width: 100%;
+    // display: flex;
+    // align-items: flex-start;
+    // justify-content: space-between;
+    // z-index: 2;
+    // margin: 1vw 2vw;
+    // height: auto;
+    .menu {
+        display: flex;
+        justify-content: center;
+        align-self: center;
+    }
     img {
         max-width: 100%;
         max-height: 100px;
     }
     .menu {
-        display: flex;
+        li {
+            display: flex;
+        }
         a {
             font-family: $futuraMedium;
             font-size: 1rem;
